[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
utoipa-axum = "0.1.2"
serde = "1"
serde_json = "1"
anyhow = "1.0.92"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "chrono",
  "runtime-tokio-rustls",
  "macros",
] }
uuid = "1.11.0"
chrono = "0.4.39"
dotenv = "0.15.0"
