[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
utoipa-axum = "0.1.2"
serde = "1"
serde_json = "1"
anyhow = "1.0.92"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "chrono",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
] }
uuid = "1.11.0"
chrono = "0.4.39"
dotenv = "0.15.0"
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
