[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = [
  "axum_extras",
  "chrono",
  "decimal",
  "uuid",
] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"
serde = "1"
serde_json = "1"
anyhow = "1.0.95"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "chrono",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "rust_decimal",
  "migrate",
] }
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
